name:                compiler
version:             0.1.0.0
synopsis:            Toy mini-compiler
license:             BSD3
license-file:        LICENSE
author:              Kostia Ivanov
maintainer:          martoon_00@mail.ru
category:            Compiler
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Toy.Exp
                       Toy.Lang
                       Toy.SM
                       Toy.X86
  other-modules:       Toy.Exp.Data
                       Toy.Exp.Eval
                       Toy.Exp.Operations
                       Toy.Exp.Util
                       Toy.Lang.Data
                       Toy.Lang.Interpreter
                       Toy.Lang.Parser
                       Toy.Lang.Translator
                       Toy.SM.Data
                       Toy.SM.Interpreter
                       Toy.X86.Data
                       Toy.X86.Translator
                       Toy.X86.Util

  build-depends:       attoparsec
                     , base >= 4.7 && < 5
                     , containers
                     , deepseq
                     , dlist
                     , formatting
                     , lens
                     , mtl
                     , process
                     , spoon
                     , vector
                     , text
                     , text-format
                     , raw-strings-qq
                     , universum
  ghc-options:         -Wall
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

test-suite tests
  main-is:             Test.hs
  other-modules:       Spec
                       Test.Arbitrary
                       Test.Execution
                       Test.Lang.ExpSpec
                       Test.Lang.InterpreterSpec
                       Test.Lang.ParserSpec
                       Test.SM.InterpreterSpec
                       Test.Walker
                       Test.Walker.Extractor
                       Test.Walker.FileReader
                       Test.Walker.Instances
                       Test.Util
  type:                exitcode-stdio-1.0
  build-depends:       attoparsec
                     , base >= 4.7 && < 5
                     , containers
                     , compiler
                     , data-default
                     , directory
                     , either
                     , exceptions
                     , filepath
                     , formatting
                     , hspec
                     , hspec-core
                     , lens
                     , mmorph
                     , mtl
                     , process
                     , spoon
                     , text
                     , text-format
                     , transformers
                     , QuickCheck
  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -threaded -Wall -fno-warn-orphans
  default-extensions:  OverloadedLists
                       OverloadedStrings
