name:                compiler
version:             0.1.0.0
synopsis:            Toy mini-compiler
license:             BSD3
license-file:        LICENSE
author:              Kostia Ivanov
maintainer:          martoon_00@mail.ru
category:            Compiler
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Toy.Base
                       Toy.Constants
                       Toy.Execution
                       Toy.Exp
                       Toy.Lang
                       Toy.SM
                       Toy.Util
                       Toy.X86
  other-modules:       Toy.Base.Data
                       Toy.Base.Fun
                       Toy.Base.Parsable

                       Toy.Execution.Data
                       Toy.Execution.Exec
                       Toy.Execution.Trans

                       Toy.Exp.Arrays
                       Toy.Exp.Data
                       Toy.Exp.Ext
                       Toy.Exp.Operations
                       Toy.Exp.RefEnv
                       Toy.Exp.Util

                       Toy.Lang.Data
                       Toy.Lang.Eval
                       Toy.Lang.Interpreter
                       Toy.Lang.Parser
                       Toy.Lang.Translator

                       Toy.SM.Data
                       Toy.SM.Interpreter
                       Toy.SM.Util

                       Toy.Util.Bits
                       Toy.Util.Error
                       Toy.Util.Instances
                       Toy.Util.Parsable

                       Toy.X86.Convertion
                       Toy.X86.Data
                       Toy.X86.Frame
                       Toy.X86.Globals
                       Toy.X86.Optimize
                       Toy.X86.Process
                       Toy.X86.SymStack
                       Toy.X86.Translator

  build-depends:       autoexporter
                     , base >= 4.7 && < 5
                     , conduit
                     , conduit-combinators
                     , containers
                     , data-default
                     , deepseq
                     , dlist
                     , exceptions
                     , either
                     , formatting
                     , filepath
                     , lens
                     , megaparsec
                     , mmorph
                     , mtl
                     , process
                     , serokell-util
                     , spoon
                     , vector
                     , text
                     , text-format
                     , transformers
                     , raw-strings-qq
                     , universum
  ghc-options:         -Wall
  default-language:    Haskell2010
  default-extensions:  FlexibleContexts
                       FlexibleInstances
                       OverloadedStrings
                       TypeOperators
                       ConstraintKinds
                       LambdaCase
                       MultiParamTypeClasses
                       MultiWayIf
                       NoImplicitPrelude
                       OverloadedStrings
                       ScopedTypeVariables
                       TupleSections
                       TypeApplications
                       TypeOperators
                       RecordWildCards
                       ViewPatterns
                       ExplicitForAll

executable launch
  main-is:              Main.hs
  build-depends:        base >= 4.8 && < 5
                      , conduit
                      , compiler
                      , either
                      , formatting
                      , lens
                      , mtl
                      , text
                      , universum

  hs-source-dirs:      launch
  default-language:    Haskell2010
  ghc-options:         -threaded -Wall -fno-warn-orphans
  default-extensions:  OverloadedStrings
                       NoImplicitPrelude
                       TypeApplications

test-suite tests
  main-is:             Test.hs
  other-modules:       Spec
                       Test.Arbitrary
                       Test.Execution
                       Test.Examples.BaseSpec
                       Test.Examples.ExpSpec
                       Test.Examples.FunSpec
                       Test.Examples.GNonlocalJmpSpec
                       Test.Examples.IArraySpec
                       Test.Examples.KParserSpec
                       Test.Examples.YComplexSpec
                       Test.Examples.ZControlSpec
                       Test.Walker
                       Test.Walker.Extractor
                       Test.Walker.FileReader
                       Test.Walker.Instances
                       Test.Util
  type:                exitcode-stdio-1.0
  build-depends:       ansi-terminal
                     , attoparsec
                     , base >= 4.7 && < 5
                     , containers
                     , compiler
                     , data-default
                     , directory
                     , either
                     , exceptions
                     , filepath
                     , formatting
                     , hspec
                     , hspec-core
                     , lens
                     , mmorph
                     , mtl
                     , process
                     , spoon
                     , text
                     , text-format
                     , transformers
                     , QuickCheck
                     , universum
  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -threaded -Wall -fno-warn-orphans
  default-extensions:  FlexibleContexts
                       FlexibleInstances
                       MultiParamTypeClasses
                       MultiWayIf
                       NoImplicitPrelude
                       OverloadedStrings
                       TypeApplications
                       ScopedTypeVariables
                       ViewPatterns
                       RecordWildCards
